Unit test fixes part 4, holy shit when it will stop.